--- a/SporSalonuUyeYonetimSistemi/SporSalonuUyeYonetimSistemi.csproj
+++ b/SporSalonuUyeYonetimSistemi/SporSalonuUyeYonetimSistemi.csproj
@@ -214,6 +214,12 @@
     <Compile Include="Forms\Trainers\TrainerStudents.Designer.cs">
       <DependentUpon>TrainerStudents.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Workout\WorkoutList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Workout\WorkoutList.Designer.cs">
+      <DependentUpon>WorkoutList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\Exercise\AddExercise.resx">
@@ -287,6 +293,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Trainers\TrainerStudents.resx">
       <DependentUpon>TrainerStudents.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Workout\WorkoutList.resx">
+      <DependentUpon>WorkoutList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
